--- a/BackEnd/src/main/resources/application.properties
+++ b/BackEnd/src/main/resources/application.properties
@@ -2,14 +2,14 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 #Ambientes de prueba
-#spring.datasource.url=jdbc:mysql://localhost:3306/backendportfolio?useSSL=false&serverTimezone=UTC
-#spring.datasource.username=root
-#spring.datasource.password=
+spring.datasource.url=jdbc:mysql://localhost:3306/backendportfolio?useSSL=false&serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=
 
-Ambientes de produccion
-spring.datasource.url=mysql://bv3ml8br3cghy76x:uwyu3gainwwzntgg@h1use0ulyws4lqr1.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/wh5x6ezz4vygysdn
-spring.datasource.username=bv3ml8br3cghy76x
-spring.datasource.password=wyu3gainwwzntgg
+#Ambientes de produccion
+#spring.datasource.url=jdbc:mysql://uvuxrllxa9aq32rf:DizmgtrygFZBujVkHKRR@bzlprlkehibarekqwc2q-mysql.services.clever-cloud.com:3306/bzlprlkehibarekqwc2q
+#spring.datasource.username=uvuxrllxa9aq32rf
+#spring.datasource.password=DizmgtrygFZBujVkHKRR
 
 #JWT
 jwt.secret = secret
